Estilos iniciales para componente Calculator

--- a/src/components/Calculator/Calculator.scss
+++ b/src/components/Calculator/Calculator.scss
@@ -1,7 +1,9 @@
+$main-color: #ffadf5;
+
 #calculator-container {
   width: 300px;
   border-radius: 50px;
-  background: #ffadf5;
+  background: $main-color;
   box-shadow:  -20px 20px 60px #d993d0,
                20px -20px 60px #ffc7ff;
 }
