Estilos para el componente CalculatorPad

--- a/src/components/Calculator/Calculator.css
+++ b/src/components/Calculator/Calculator.css
@@ -1,8 +1,8 @@
 #calculator-container {
   width: 300px;
   border-radius: 50px;
-  background: #ffadf5;
-  box-shadow: -20px 20px 60px #d993d0, 20px -20px 60px #ffc7ff;
+  background: #2501a7;
+  box-shadow: -20px 20px 60px #1f018e, 20px -20px 60px #2b01c0;
 }
 
 /*# sourceMappingURL=Calculator.css.map */
