--- a/src/components/Calculator/Calculator.scss
+++ b/src/components/Calculator/Calculator.scss
@@ -1,9 +1,9 @@
-$main-color: #ffadf5;
+$main-color: #2501a7;
 
 #calculator-container {
   width: 300px;
   border-radius: 50px;
   background: $main-color;
-  box-shadow:  -20px 20px 60px #d993d0,
-               20px -20px 60px #ffc7ff;
+  box-shadow:  -20px 20px 60px #1f018e,
+               20px -20px 60px #2b01c0;
 }
