--- a/src/components/CalculatorPad/CalculatorPad.css
+++ b/src/components/CalculatorPad/CalculatorPad.css
@@ -1,10 +1,40 @@
 #pad-container {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
+  gap: 5px;
 }
 
 #pad-container > :first-child {
   grid-column: 3/4;
+}
+
+.btn-clear {
+  background: rgba(217, 83, 79, 0.75);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  border: 1px solid rgba(255, 255, 255, 0.18);
+}
+.btn-power {
+  background: rgba(0, 0, 0, 0.75);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  border: 1px solid rgba(255, 255, 255, 0.18);
+}
+.btn-clear, .btn-power, .btn-operator {
+  color: white;
+}
+.btn-operator {
+  background: rgba(41, 43, 44, 0.75);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  border: 1px solid rgba(255, 255, 255, 0.18);
+}
+.btn-number {
+  background: rgba(255, 255, 255, 0.8);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  border: 1px solid rgba(255, 255, 255, 0.18);
+}
+.btn-clear, .btn-power, .btn-operator, .btn-number {
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
+  border-radius: 10px;
 }
 
 /*# sourceMappingURL=CalculatorPad.css.map */
