funcionalidad para la muestra de informacion en la pantalla

--- a/src/components/CalculatorScreen/CalculatorScreen.scss
+++ b/src/components/CalculatorScreen/CalculatorScreen.scss
@@ -13,15 +13,17 @@ $displayOff: #ffffed80;
   background: $displayOff !important;
 }
 
-#result, #input {
+#result, #display {
   font-family: 'Inconsolata', "Courier New", Courier, monospace;
   word-wrap: break-word;
 }
 
 #result {
+  height: 25px;
   font-size: 20px;
 }
 
-#input {
+#display {
+  height: 40px;
   font-size: 30px;
 }
